--- a/index.html
+++ b/index.html
@@ -8,8 +8,15 @@
     <script src="javascript.js" defer></script>
 </head>
 <body>
+    <h1>Rock Paper Scissors <br> 
+        VS <br>
+        Computer
+    </h1>
+    
     <button id="rock">Rock</button>
     <button id="paper">Paper</button>
     <button id="scissors">Scissors</button>
+
+    <div id="container"></div>
 </body>
 </html>
