Add visible result on the page

--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
     <button id="paper">Paper</button>
     <button id="scissors">Scissors</button>
 
-    <div id="container"></div>
+    <h3>Result:</h3>
+    <div id="container">
+        <div class="content"></div>
+    </div>
 </body>
 </html>
