Add results with working js

--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
         VS <br>
         Computer
     </h1>
-    
+
+    <h3>Make a choice:</h3>
     <button id="rock">Rock</button>
     <button id="paper">Paper</button>
     <button id="scissors">Scissors</button>
@@ -21,5 +22,14 @@
     <div id="container">
         <div class="content"></div>
     </div>
+
+    <h3>Scores:</h3>
+    <div id="scores">
+        <div class="playerScore">0</div>
+    </div>
+    <div id="computerScores">
+        <div class="computerScore">0</div>
+    </div>
+
 </body>
 </html>
