Add player and computer above scores

--- a/index.html
+++ b/index.html
@@ -24,9 +24,11 @@
     </div>
 
     <h3>Scores:</h3>
+    <div>Player</div>
     <div id="scores">
         <div class="playerScore">0</div>
     </div>
+    <div>Computer</div>
     <div id="computerScores">
         <div class="computerScore">0</div>
     </div>
