--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
     <div id="computerScores">
         <div class="computerScore">0</div>
     </div>
+    <div id="endresult"></div>
 
 </body>
 </html>
