Add restart button

--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
         <div class="computerScore">0</div>
     </div>
     <div id="endresult"></div>
+    <p>Restart the game:</p>
+    <button id ="restart">Restart</button>
+    
 
 </body>
 </html>
