Disable the buttons when the game is over

--- a/index.html
+++ b/index.html
@@ -14,9 +14,11 @@
     </h1>
 
     <h3>Make a choice:</h3>
+    <div id="buttons">
     <button id="rock">Rock</button>
     <button id="paper">Paper</button>
     <button id="scissors">Scissors</button>
+    </div>
 
     <h3>Result:</h3>
     <div id="container">
@@ -28,10 +30,12 @@
     <div id="scores">
         <div class="playerScore">0</div>
     </div>
+    <br>
     <div>Computer</div>
     <div id="computerScores">
         <div class="computerScore">0</div>
     </div>
+    <br>
     <div id="endresult"></div>
     <p>Restart the game:</p>
     <button id ="restart">Restart</button>
