Make small changes to padding and margin of certain elements

--- a/index.html
+++ b/index.html
@@ -27,8 +27,7 @@
         <div class="content"></div>
     </div>
     
-<div id="score-box"
-    <h3>Scores:</h3>
+<div id="score-box">
     <div>Player</div>
     <div id="scores">
         <div class="playerScore">0</div>
@@ -39,11 +38,12 @@
         <div class="computerScore">0</div>
     </div>
 </div>
-    <div id="restart-div">
+
+<div id="restart-div">
     <div id="endresult"></div>
     <p>Restart the game:</p>
     <button id ="restart">Restart</button>
-    </div>
+</div>
 
 </body>
 </html>
