Animate restart div and make visual changes

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
 <div id="restart-div">
     <div id="endresult"></div>
-    <p>Restart the game:</p>
+    <h3 id="restartgame">Restart the game:</h3>
     <button id ="restart">Restart</button>
 </div>
 
