Add borders and bolder/underline on certain texts

--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
     <script src="javascript.js" defer></script>
 </head>
 <body>
-    
+    <div id="header-box">
     <h1>Rock Paper Scissors  </h1>
     <h1>  VS </h1>
     <h1>Computer</h1>
-    
+    </div>
 
     <h3>Make a choice:</h3>
     <div id="buttons">
